# wallet-rest-api

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: wallets.py
app/core/: config.py  database.py
app/models/: wallet.py
app/schemas/: wallet.py
migrations/: env.py
migrations/versions/: b0fa0b1e9a56_create_wallets_table.py
tests/: conftest.py  test_wallets.py
